force-app/main/default/objects/Factura__c/fields/Factura_numero__c.field-meta.xml
<CustomField>
    <fullName>Factura_numero__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Factura numero</label>
    <type>AutoNumber</type>
</CustomField>