force-app/main/default/objects/Factura__c/fields/Numero_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Cuenta__c</fullName>
    <label>Numero de Cuenta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>