force-app/main/default/objects/Factura__c/fields/Pagado__c.field-meta.xml
<CustomField>
    <fullName>Pagado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pagado</label>
    <type>Checkbox</type>
</CustomField>