force-app/main/default/objects/Factura__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Telefono</label>
    <length>255</length>
    <type>Text</type>
</CustomField>